+ Change ismai.creditacoes to be a copy always.

--- a/CMA.ISMAI.Engine.API/CMA.ISMAI.Engine.API.csproj
+++ b/CMA.ISMAI.Engine.API/CMA.ISMAI.Engine.API.csproj
@@ -6,10 +6,14 @@
 
   <ItemGroup>
     <None Remove="WorkFlow\DeployTest.bpmn" />
+    <None Remove="WorkFlow\ismai.creditacao.bpmn" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="WorkFlow\DeployTest.bpmn">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WorkFlow\ismai.creditacao.bpmn">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
