+ Full CQRS structure

--- a/CMA.ISMAI.Trello.Domain/CMA.ISMAI.Trello.Domain.csproj
+++ b/CMA.ISMAI.Trello.Domain/CMA.ISMAI.Trello.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CMA.ISMAI.Core\CMA.ISMAI.Core.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Trello.Engine\CMA.ISMAI.Trello.Engine.csproj" />
   </ItemGroup>
 
