--- a/CMA.ISMAI.UnitTests/CMA.ISMAI.UnitTests.csproj
+++ b/CMA.ISMAI.UnitTests/CMA.ISMAI.UnitTests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CMA.ISMAI.Engine.API\CMA.ISMAI.Engine.API.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Engine.Automation.Sagas\CMA.ISMAI.Engine.Automation.Sagas.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Engine.Automation\CMA.ISMAI.Engine.Automation.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Engine.Domain\CMA.ISMAI.Engine.Domain.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
