--- a/CMA.ISMAI.UnitTests/CMA.ISMAI.UnitTests.csproj
+++ b/CMA.ISMAI.UnitTests/CMA.ISMAI.UnitTests.csproj
@@ -16,9 +16,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CMA.ISMAI.Engine.API\CMA.ISMAI.Engine.API.csproj" />
-    <ProjectReference Include="..\CMA.ISMAI.Engine.Automation.Sagas\CMA.ISMAI.Engine.Automation.Sagas.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Engine.Automation\CMA.ISMAI.Engine.Automation.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Engine.Domain\CMA.ISMAI.Engine.Domain.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Engine.Sagas\CMA.ISMAI.Sagas.Engine.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Trello.API\CMA.ISMAI.Trello.API.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Trello.Domain\CMA.ISMAI.Trello.Domain.csproj" />
