--- a/CMA.ISMAI.Engine.Automation.Sagas/CMA.ISMAI.Sagas.Engine.csproj
+++ b/CMA.ISMAI.Engine.Automation.Sagas/CMA.ISMAI.Sagas.Engine.csproj
@@ -6,10 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="BerndRuecker.Sample.CamundaClient" Version="0.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CMA.ISMAI.Engine.Automation\CMA.ISMAI.Engine.Automation.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
   </ItemGroup>
 
 </Project>
