+ Solution finished. + Needs to be test reviewd.

--- a/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CMAISMAISolutionsCreditacoesUIContext": "Server=(localdb)\\mssqllocaldb;Database=CMAISMAISolutionsCreditacoesUIContext-27376167-4a57-4964-9a61-3e5c3f3adc22;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
