--- a/CMA.ISMAI.UnitTests/CMA.ISMAI.UnitTests.csproj
+++ b/CMA.ISMAI.UnitTests/CMA.ISMAI.UnitTests.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\CMA.ISMAI.Engine.Domain\CMA.ISMAI.Engine.Domain.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Engine.Sagas\CMA.ISMAI.Sagas.Engine.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Solutions.Creditacoes.UI\CMA.ISMAI.Solutions.Creditacoes.UI.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Trello.API\CMA.ISMAI.Trello.API.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Trello.Domain\CMA.ISMAI.Trello.Domain.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Trello.Engine\CMA.ISMAI.Trello.Engine.csproj" />
