+ One engine per microservice implemented

--- a/CMA.ISMAI.Engine.Automation/CMA.ISMAI.Trello.Engine.Automation.csproj
+++ b/CMA.ISMAI.Engine.Automation/CMA.ISMAI.Trello.Engine.Automation.csproj
@@ -2,9 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyName>CMA.ISMAI.Automation</AssemblyName>
-    <RootNamespace>CMA.ISMAI.Automation</RootNamespace>
+    <AssemblyName>CMA.ISMAI.Trello.Engine.Automation</AssemblyName>
+    <RootNamespace>CMA.ISMAI.Trello.Engine.Automation</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="WorkFlow\creditacaoISMAI.bpmn" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="WorkFlow\creditacaoISMAI.bpmn">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BerndRuecker.Sample.CamundaClient" Version="0.1.1" />
