--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -9,5 +9,15 @@
   "ElasticConfiguration": {
     "Uri": "http://localhost:9200/"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Health Check",
+        "Uri": "https://localhost:5001/hc"
+      }
+    ],
+    "EvaluationTimeOnSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
+  }
 }
