--- a/CMA.ISMAI.Trello.Domain/CMA.ISMAI.Trello.Domain.csproj
+++ b/CMA.ISMAI.Trello.Domain/CMA.ISMAI.Trello.Domain.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CMA.ISMAI.Core\CMA.ISMAI.Core.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Engine.Automation\CMA.ISMAI.Trello.Engine.Automation.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Trello.Engine\CMA.ISMAI.Trello.Engine.csproj" />
   </ItemGroup>
 
