--- a/CMA.ISMAI.UnitTests/CMA.ISMAI.UnitTests.csproj
+++ b/CMA.ISMAI.UnitTests/CMA.ISMAI.UnitTests.csproj
@@ -15,9 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CMA.ISMAI.Engine.API\CMA.ISMAI.Engine.API.csproj" />
-    <ProjectReference Include="..\CMA.ISMAI.Engine.Automation\CMA.ISMAI.Engine.Automation.csproj" />
-    <ProjectReference Include="..\CMA.ISMAI.Engine.Domain\CMA.ISMAI.Engine.Domain.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Engine.Automation\CMA.ISMAI.Trello.Engine.Automation.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Engine.Sagas\CMA.ISMAI.Sagas.Engine.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Solutions.Creditacoes.UI\CMA.ISMAI.Solutions.Creditacoes.UI.csproj" />
