+ json file updated.

--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -9,6 +9,15 @@
   "ElasticConfiguration": {
     "Uri": "http://localhost:9200/"
   },
+  "Camunda": {
+    "Uri": "http://localhost:8080/"
+  },
+  "RabbitMq": {
+    "Uri": "amqp://admin:admin@localhost:5672/"
+  },
+  "Trello": {
+    "Uri": "https://api.trello.com"
+  },
   "AllowedHosts": "*",
   "HealthChecksUI": {
     "HealthChecks": [
