--- a/CMA.ISMAI.Trello.Engine/CMA.ISMAI.Trello.Engine.csproj
+++ b/CMA.ISMAI.Trello.Engine/CMA.ISMAI.Trello.Engine.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Manatee.Trello" Version="4.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
