+ Event store added.

--- a/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
@@ -9,5 +9,8 @@
   "ElasticConfiguration": {
     "Uri": "http://localhost:9200/"
   },
+  "Trello": {
+    "Uri": "https://localhost:5001/Trello/AddCardAndProcess"
+  },
   "AllowedHosts": "*"
 }
