--- a/CMA.ISMAI.Trello.Engine/CMA.ISMAI.Trello.Engine.csproj
+++ b/CMA.ISMAI.Trello.Engine/CMA.ISMAI.Trello.Engine.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Trello.Settings\CMA.ISMAI.Trello.Settings.csproj" />
   </ItemGroup>
 
 </Project>
