--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,13 +19,6 @@ services:
     - elasticsearch
    networks:
     - docker-network
-  eventsourcing:
-   image: eventstore/eventstore
-   container_name: eventstore
-   ports:
-    - "5603:5603"
-   networks:
-    - docker-network
   rabbitmq:
    image: rabbitmq:management
    environment:
@@ -42,9 +35,21 @@ services:
     - "8080:8080"
    networks:
     - docker-network
+  eventstore.db:
+    image: eventstore/eventstore
+    environment:
+      - EVENTSTORE_CLUSTER_SIZE=1
+      - EVENTSTORE_INT_TCP_PORT=1112
+      - EVENTSTORE_EXT_TCP_PORT=1113
+      - EVENTSTORE_INT_HTTP_PORT=2112
+      - EVENTSTORE_EXT_HTTP_PORT=2113
+    ports:
+      - "1112:1112"
+      - "1113:1113"
+      - "2112:2112"
+      - "2113:2113"
 networks:
   docker-network:
     driver: bridge
-
 volumes:
   elasticsearch-data:
