--- a/CMA.ISMAI.Engine.Automation/CMA.ISMAI.Trello.Engine.Automation.csproj
+++ b/CMA.ISMAI.Engine.Automation/CMA.ISMAI.Trello.Engine.Automation.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Trello.Settings\CMA.ISMAI.Trello.Settings.csproj" />
   </ItemGroup>
 
 </Project>
