--- a/CMA.ISMAI.Engine.Sagas/CMA.ISMAI.Sagas.Engine.csproj
+++ b/CMA.ISMAI.Engine.Sagas/CMA.ISMAI.Sagas.Engine.csproj
@@ -5,7 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="sagasengine_appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="sagasengine_appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BerndRuecker.Sample.CamundaClient" Version="0.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
