+ email and event sourcing fixed.

--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -12,6 +12,9 @@
   "Camunda": {
     "Uri": "http://localhost:8080/engine-rest/engine/default/"
   },
+  "CamundaHealth": {
+    "Uri": "http://localhost:8080/"
+  },
   "RabbitMq": {
     "Uri": "amqp://admin:admin@localhost:5672/"
   },
