+ Unit tests fixed.

--- a/CMA.ISMAI.Core/CMA.ISMAI.Core.csproj
+++ b/CMA.ISMAI.Core/CMA.ISMAI.Core.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
+  </ItemGroup>
+
 </Project>
