--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -30,6 +30,15 @@
     "Department_director": "5e7a61697c32d815f76c71ce",
     "Scientific_council": "5e7a617c1c87ae276116c00f"
   },
+  "RabbitMqCore": {
+    "Uri": "localhost",
+    "Username": "admin",
+    "Password": "admin",
+    "Port": "5672"
+  },
+  "EventStore": {
+    "IPAddress": "tcp://admin:changeit@localhost:1113"
+  },
   "AllowedHosts": "*",
   "HealthChecksUI": {
     "HealthChecks": [
