--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -28,7 +28,8 @@
   "BoardIds": {
     "Course_coordinator": "5e7a615492c8e839429fd13b",
     "Department_director": "5e7a61697c32d815f76c71ce",
-    "Scientific_council": "5e7a617c1c87ae276116c00f"
+    "Scientific_council": "5e7a617c1c87ae276116c00f",
+    "Testing_board": "5e8a3bb351ea21188bc0a6b2"
   },
   "RabbitMqCore": {
     "Uri": "localhost",
