--- a/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.Development.json
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200/"
+  },
+  "Trello": {
+    "Uri": "https://localhost:5001/Trello/AddCardAndProcess"
+  },
+  "AllowedHosts": "*"
 }
