+ End to end tests. + AppSettings reader new logic implemented.

--- a/CMA.ISMAI.Engine.Sagas/CMA.ISMAI.Sagas.Engine.csproj
+++ b/CMA.ISMAI.Engine.Sagas/CMA.ISMAI.Sagas.Engine.csproj
@@ -5,16 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="sagasengine_appsettings.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="sagasengine_appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="BerndRuecker.Sample.CamundaClient" Version="0.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.3" />
@@ -23,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CMA.ISMAI.Core\CMA.ISMAI.Core.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
   </ItemGroup>
 
