--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -4,5 +4,8 @@
   },
   "CamundaConfiguration": {
     "Uri": "http://localhost:8080/engine-rest/engine/default/"
+  },
+  "TrelloApi": {
+    "Uri": "https://localhost:5001/Trello/AddCard"
   }
 }
