--- a/CMA.ISMAI.Engine.Automation/CMA.ISMAI.Trello.Engine.Automation.csproj
+++ b/CMA.ISMAI.Engine.Automation/CMA.ISMAI.Trello.Engine.Automation.csproj
@@ -24,8 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CMA.ISMAI.Core\CMA.ISMAI.Core.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
-    <ProjectReference Include="..\CMA.ISMAI.Trello.Settings\CMA.ISMAI.Trello.Settings.csproj" />
   </ItemGroup>
 
 </Project>
