--- a/CMA.ISMAI.Sagas/CMA.ISMAI.Sagas.csproj
+++ b/CMA.ISMAI.Sagas/CMA.ISMAI.Sagas.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="sagas_appsettings.json">
+    <Content Include="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
