--- a/CMA.ISMAI.Trello.Engine/CMA.ISMAI.Trello.Engine.csproj
+++ b/CMA.ISMAI.Trello.Engine/CMA.ISMAI.Trello.Engine.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CMA.ISMAI.Core\CMA.ISMAI.Core.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
-    <ProjectReference Include="..\CMA.ISMAI.Trello.Settings\CMA.ISMAI.Trello.Settings.csproj" />
   </ItemGroup>
 
 </Project>
