+ Several fixes made. + Better organization in sagas folder.

--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -7,5 +7,17 @@
   },
   "TrelloApi": {
     "Uri": "https://localhost:5001/Trello/AddCard"
+  },
+  "TrelloCardsTime": {
+    "course-coordinator": 20,
+    "department-director": 5,
+    "coordenator-jury": 2,
+    "jury-delibers": 2
+  },
+  "SummerDealy": {
+    "Activate-delay": true
+  },
+  "EmailSecretaria": {
+    "Email": "carlosmiguelcampos1996@gmail.com"
   }
 }
