--- a/CMA.ISMAI.Sagas/CMA.ISMAI.Sagas.csproj
+++ b/CMA.ISMAI.Sagas/CMA.ISMAI.Sagas.csproj
@@ -6,10 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Services\sagas_appsettings.json" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="BerndRuecker.Sample.CamundaClient" Version="0.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
@@ -22,8 +18,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CMA.ISMAI.Core\CMA.ISMAI.Core.csproj" />
-    <ProjectReference Include="..\CMA.ISMAI.Engine.Sagas\CMA.ISMAI.Sagas.Engine.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Engine.Sagas\CMA.ISMAI.Sagas.Service.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
+    <ProjectReference Include="..\CMA.ISMAI.Sagas.Domain\CMA.ISMAI.Sagas.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
