+ Some code clean up and testing.

--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -6,7 +6,10 @@
     "Uri": "http://localhost:8080/engine-rest/engine/default/"
   },
   "TrelloApi": {
-    "Uri": "https://localhost:5001/Trello/AddCard"
+    "AddCardUri": "https://localhost:5001/Trello/AddCard",
+    "DeleteCardUri": "https://localhost:5001/Trello/DeleteCard",
+    "GetCardStateUri": "https://localhost:5001/Trello/GetCardStatus",
+    "GetCardAttachmentsUri": "https://localhost:5001/Trello/GetCardAttachments"
   },
   "TrelloCardsTime": {
     "course-coordinator": 20,
