+ fix duetime to count only business days.

--- a/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
@@ -12,5 +12,9 @@
   "Trello": {
     "Uri": "https://localhost:5001/Trello/AddCardAndProcess"
   },
+  "TrelloCardsTime": {
+    "course-coordinator-jury": 5,
+    "course-coordinator-proposal": 15
+  },
   "AllowedHosts": "*"
 }
