+ docker file creation + Added on appsettings.json a key for file path for FileReader library

--- a/CMA.ISMAI.Trello.API/CMA.ISMAI.Trello.API.csproj
+++ b/CMA.ISMAI.Trello.API/CMA.ISMAI.Trello.API.csproj
@@ -20,5 +20,11 @@
     <ProjectReference Include="..\CMA.ISMAI.Trello.Engine\CMA.ISMAI.Trello.Engine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 
 </Project>
