--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -15,6 +15,9 @@
   "CamundaHealth": {
     "Uri": "http://localhost:8080/"
   },
+  "FileReader": {
+    "Path": "C:\\Users\\Carlos Campos\\Desktop\\ismai.xlsx"
+  },
   "RabbitMq": {
     "Uri": "amqp://admin:admin@localhost:5672/"
   },
