--- a/CMA.ISMAI.Trello.FileReader/CMA.ISMAI.Trello.FileReader.csproj
+++ b/CMA.ISMAI.Trello.FileReader/CMA.ISMAI.Trello.FileReader.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CMA.ISMAI.Core\CMA.ISMAI.Core.csproj" />
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
   </ItemGroup>
 
