+ DockerFiles added to the projects

--- a/CMA.ISMAI.Solutions.Creditacoes.UI/CMA.ISMAI.Solutions.Creditacoes.UI.csproj
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/CMA.ISMAI.Solutions.Creditacoes.UI.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>48cd6fcf-cb7d-4f6b-ae67-b31ba8f38c2f</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.0.1" />
