--- a/CMA.ISMAI.Solutions.Creditacoes.UI/CMA.ISMAI.Solutions.Creditacoes.UI.csproj
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/CMA.ISMAI.Solutions.Creditacoes.UI.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>48cd6fcf-cb7d-4f6b-ae67-b31ba8f38c2f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
