--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,29 @@
-version: '3.1'
+version: '3.4'
 
 services:
-  elasticsearch:
-   image: docker.elastic.co/elasticsearch/elasticsearch:6.2.4
-   container_name: elasticsearch
-   ports:
-    - "9200:9200"
-   volumes:
-    - elasticsearch-data:/usr/share/elasticsearch/data
-   networks:
-    - docker-network
-  kibana:
-   image: docker.elastic.co/kibana/kibana:6.2.4
-   container_name: kibana
-   ports:
-    - "5601:5601"
-   depends_on:
-    - elasticsearch
-   networks:
-    - docker-network
-  rabbitmq:
-   image: rabbitmq:management
-   environment:
-    RABBITMQ_ERLANG_COOKIE: "SWQOKODSQALRPCLNMEQG"
-    RABBITMQ_DEFAULT_USER: "admin"
-    RABBITMQ_DEFAULT_PASS: "admin"
-    RABBITMQ_DEFAULT_VHOST: "/"
-   ports:
-    - "5672:5672"
-    - "15672:15672"
-  camunda:
-   image: camunda/camunda-bpm-platform:latest
-   ports:
-    - "8080:8080"
-   networks:
-    - docker-network
-  eventstore.db:
-    image: eventstore/eventstore
-    environment:
-      - EVENTSTORE_CLUSTER_SIZE=1
-      - EVENTSTORE_INT_TCP_PORT=1112
-      - EVENTSTORE_EXT_TCP_PORT=1113
-      - EVENTSTORE_INT_HTTP_PORT=2112
-      - EVENTSTORE_EXT_HTTP_PORT=2113
-    ports:
-      - "1112:1112"
-      - "1113:1113"
-      - "2112:2112"
-      - "2113:2113"
-networks:
-  docker-network:
-    driver: bridge
-volumes:
-  elasticsearch-data:
+  cma.ismai.trello.api:
+    image: ${DOCKER_REGISTRY-}cmaismaitrelloapi
+    build:
+      context: .
+      dockerfile: CMA.ISMAI.Trello.API/Dockerfile
+
+  cma.ismai.sagas.ui:
+    image: ${DOCKER_REGISTRY-}cmaismaisagasui
+    build:
+      context: .
+      dockerfile: CMA.ISMAI.Sagas/Dockerfile
+
+
+  cma.ismai.notifications:
+    image: ${DOCKER_REGISTRY-}cmaismainotifications
+    build:
+      context: .
+      dockerfile: CMA.ISMAI.Notifications/Dockerfile
+
+
+  cma.ismai.solutions.creditacoes.ui:
+    image: ${DOCKER_REGISTRY-}cmaismaisolutionscreditacoesui
+    build:
+      context: .
+      dockerfile: CMA.ISMAI.Solutions.Creditacoes.UI/Dockerfile
+
