Docker-compose with container communication

--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -6,10 +6,10 @@
     "Uri": "http://localhost:8080/engine-rest/engine/default/"
   },
   "TrelloApi": {
-    "AddCardUri": "https://localhost:5001/Trello/AddCard",
-    "DeleteCardUri": "https://localhost:5001/Trello/DeleteCard",
-    "GetCardStateUri": "https://localhost:5001/Trello/GetCardStatus",
-    "GetCardAttachmentsUri": "https://localhost:5001/Trello/GetCardAttachments"
+    "AddCardUri": "http://cmaismaitrelloapi/Trello/AddCard",
+    "DeleteCardUri": "http://cmaismaitrelloapi/Trello/DeleteCard",
+    "GetCardStateUri": "http://cmaismaitrelloapi/Trello/GetCardStatus",
+    "GetCardAttachmentsUri": "http://cmaismaitrelloapi/Trello/GetCardAttachments"
   },
   "TrelloCardsTime": {
     "course-coordinator": 20,
