--- a/CMA.ISMAI.Solutions.Creditacoes.UI/CMA.ISMAI.Solutions.Creditacoes.UI.csproj
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/CMA.ISMAI.Solutions.Creditacoes.UI.csproj
@@ -25,6 +25,18 @@
     <ProjectReference Include="..\CMA.ISMAI.Logging\CMA.ISMAI.Logging.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Startup.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 
 
 </Project>
