--- a/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
@@ -10,7 +10,7 @@
     "Uri": "http://localhost:9200/"
   },
   "Trello": {
-    "Uri": "https://localhost:5001/Trello/AddCardAndProcess"
+    "Uri": "http://cmaismaitrelloapi:80/Trello/AddCardAndProcess"
   },
   "TrelloCardsTime": {
     "course-coordinator-jury": 5,
