--- a/CMA.ISMAI.Trello.API/appsettings.json
+++ b/CMA.ISMAI.Trello.API/appsettings.json
@@ -48,7 +48,7 @@
     "HealthChecks": [
       {
         "Name": "Health Check",
-        "Uri": "https://localhost:5001/hc"
+        "Uri": "http://cmaismaitrelloapi/hc"
       }
     ],
     "EvaluationTimeOnSeconds": 10,
