+ Docker compose updated.

--- a/CMA.ISMAI.Notifications/appsettings.json
+++ b/CMA.ISMAI.Notifications/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ElasticConfiguration": {
-    "Uri": "http://localhost:9200/"
+    "Uri": "http://elasticsearch:9200/"
   },
   "RabbitMq": {
-    "Uri": "localhost",
+    "Uri": "rabbitmq",
     "Username": "admin",
     "Password": "admin",
     "Queue": "NotificationsQueue",
