--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ElasticConfiguration": {
-    "Uri": "http://localhost:9200/"
+    "Uri": "http://elasticsearch:9200/"
   },
   "CamundaConfiguration": {
-    "Uri": "http://localhost:8080/engine-rest/engine/default/"
+    "Uri": "http://camunda:8080/engine-rest/engine/default/"
   },
   "TrelloApi": {
     "AddCardUri": "http://cmaismaitrelloapi/Trello/AddCard",
@@ -22,5 +22,12 @@
   },
   "EmailSecretaria": {
     "Email": "carlosmiguelcampos1996@gmail.com"
+  },
+  "RabbitMq": {
+    "Uri": "rabbitmq",
+    "Username": "admin",
+    "Password": "admin",
+    "Queue": "NotificationsQueue",
+    "Port": "5672"
   }
 }
