--- a/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ElasticConfiguration": {
-    "Uri": "http://localhost:9200/"
+    "Uri": "http://elasticsearch:9200/"
   },
   "Trello": {
     "Uri": "http://cmaismaitrelloapi:80/Trello/AddCardAndProcess"
