+ docker compose update

--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -12,13 +12,13 @@
     "GetCardAttachmentsUri": "http://cmaismaitrelloapi/Trello/GetCardAttachments"
   },
   "TrelloCardsTime": {
-    "course-coordinator": 20,
-    "department-director": 5,
-    "coordenator-jury": 2,
-    "jury-delibers": 2
+    "coursecoordinator": 20,
+    "departmentdirector": 5,
+    "coordenatorjury": 2,
+    "jurydelibers": 2
   },
-  "SummerDealy": {
-    "Activate-delay": true
+  "SummerDelay": {
+    "Activatedelay": true
   },
   "EmailSecretaria": {
     "Email": "carlosmiguelcampos1996@gmail.com"
