--- a/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
@@ -13,8 +13,8 @@
     "Uri": "http://cmaismaitrelloapi:80/Trello/AddCardAndProcess"
   },
   "TrelloCardsTime": {
-    "course-coordinator-jury": 5,
-    "course-coordinator-proposal": 15
+    "coursecoordinatorjury": 5,
+    "coursecoordinatorproposal": 15
   },
   "AllowedHosts": "*"
 }
