+ Solution fully working.

--- a/CMA.ISMAI.Notifications/appsettings.json
+++ b/CMA.ISMAI.Notifications/appsettings.json
@@ -10,7 +10,7 @@
     "Port": "5672"
   },
   "Notification": {
-    "Email": "trelloismai@gmail.com",
-    "Password": "latiascampos"
+    "Email": "xxx",
+    "Password": "xx"
   }
 }
