--- a/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/appsettings.json
@@ -10,8 +10,12 @@
     "Uri": "http://elasticsearch:9200/"
   },
   "Trello": {
-    "Uri": "http://cmaismaitrelloapi:80/Trello/AddCardAndProcess"
+    "Uri": "http://cmaismaitrelloapi/Trello/AddCardAndProcess"
   },
+  "HealthCheck": {
+    "Uri": "http://localhost:5666/hc-ui"
+  },
+
   "TrelloCardsTime": {
     "coursecoordinatorjury": 5,
     "coursecoordinatorproposal": 15
