--- a/CMA.ISMAI.Sagas/CMA.ISMAI.Sagas.UI.csproj
+++ b/CMA.ISMAI.Sagas/CMA.ISMAI.Sagas.UI.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="BerndRuecker.Sample.CamundaClient" Version="0.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
