--- a/CMA.ISMAI.Sagas/appsettings.json
+++ b/CMA.ISMAI.Sagas/appsettings.json
@@ -21,7 +21,7 @@
     "Activatedelay": true
   },
   "EmailSecretaria": {
-    "Email": "carlosmiguelcampos1996@gmail.com"
+    "Email": "xxx"
   },
   "RabbitMq": {
     "Uri": "rabbitmq",
