--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,26 +16,26 @@ services:
     volumes:
       - C:/Shared:/shared
     environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-      - FileReader__Path=//shared//ismai.xlsx
-      - COMPOSE_CONVERT_WINDOWS_PATHS=1
-      - RabbitMqCore__Uri=rabbitmq
-      - RabbitMqCore__Username=admin
-      - RabbitMqCore__Password=admin
-      - RabbitMqCore__Queue=NotificationsQueue
-      - RabbitMqCore__Port=5672
-      - ElasticConfiguration__Uri=http://elasticsearch:9200/RabbitMq
-      - EventStore__IPAddress=tcp://admin:changeit@eventstore:1113
-      - BoardIds__Coursecoordinator=5e7a615492c8e839429fd13b
-      - BoardIds__Departmentdirector=5e7a61697c32d815f76c71ce
-      - BoardIds__Scientificcouncil=5e7a617c1c87ae276116c00f
-      - TrelloKey__AppKey=b9ef9c087e54b015072af32ee9678bbe
-      - TrelloKey__UserToken=0aa0946c32a9925cbcbf5125c4a6db676061502adde9b8213fc0e9059f59f9e9
-      - Trello__Uri=https://api.trello.com
-      - RabbitMq__Uri=amqp://admin:admin@rabbitmq:5672/
-      - CamundaHealth__Uri=http://camunda:8080/
-      - Camunda__Uri=http://camunda:8080/engine-rest/engine/default/
-      - HealthChecksUI__HealthChecks_Uri=http://cmaismaitrelloapi/hc
+      - ASPNETCORE_ENVIRONMENT=Development # Ambiente em que o projeto executará
+      - FileReader__Path=//shared//ismai.xlsx # Caminho onde o ficheiro estará no container.
+      - COMPOSE_CONVERT_WINDOWS_PATHS=1 # Caso o host seja um SO Windows.
+      - RabbitMqCore__Uri=rabbitmq # Nome do conainer do rabbitmq. Os containers internamente comunicam pelo seu nome
+      - RabbitMqCore__Username=admin # username do rabbitmq
+      - RabbitMqCore__Password=admin # password do rabbitmq
+      - RabbitMqCore__Queue=NotificationsQueue # Queue do rabbitmq
+      - RabbitMqCore__Port=5672 # Porta do rabbitmq
+      - ElasticConfiguration__Uri=http://elasticsearch:9200/RabbitMq # Nome do conainer do ElasticSearch. Os containers internamente comunicam pelo seu nome
+      - EventStore__IPAddress=tcp://admin:changeit@eventstore:1113 # Ligação ao EventStore - tcp://username:password@nomedocontainer:portaExposta
+      - BoardIds__Coursecoordinator=5e7a615492c8e839429fd13b # BoardID para os cordenadores de curso
+      - BoardIds__Departmentdirector=5e7a61697c32d815f76c71ce # BoardID para os diretores de departamento
+      - BoardIds__Scientificcouncil=5e7a617c1c87ae276116c00f # BoardID para o concelho cientifico
+      - TrelloKey__AppKey=b9ef9c087e54b015072af32ee9678bbe # APPKey para a API do Trello -  Descrito nos passos em comum
+      - TrelloKey__UserToken=0aa0946c32a9925cbcbf5125c4a6db676061502adde9b8213fc0e9059f59f9e9 # UserToken para a API do Trello -  Descrito nos passos em comum
+      - Trello__Uri=https://api.trello.com # URL da API do Trello
+      - RabbitMq__Uri=amqp://admin:admin@rabbitmq:5672/ # Comunicação com o RabbitMQ amqp://username:password@nomedoContainer:porta
+      - CamundaHealth__Uri=http://camunda:8080/ # URL para o container do camunda
+      - Camunda__Uri=http://camunda:8080/engine-rest/engine/default/ # URL para a API exposta do container do camunda
+      - HealthChecksUI__HealthChecks_Uri=http://cmaismaitrelloapi/hc # nomedocontainerdotrello/hc -> HealthChecks da solução
 
 
   cma.ismai.sagas.ui:
@@ -48,24 +48,24 @@ services:
       - network_cmaismai
     restart: always
     environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-      - RabbitMq__Uri=rabbitmq
-      - RabbitMq__Username=admin
-      - RabbitMq__Password=admin
-      - RabbitMq__Queue=NotificationsQueue
-      - RabbitMq__Port=5672
-      - TrelloCardsTime__coursecoordinator=20
-      - TrelloCardsTime__departmentdirector=5
-      - TrelloCardsTime__coordenatorjury=2
-      - TrelloCardsTime__jurydelibers=2
-      - ElasticConfiguration__Uri=http://elasticsearch:9200/
-      - SummerDelay__Activatedelay=true
-      - EmailSecretaria__Email=carlosmiguelcampos1996@gmail.com
-      - CamundaConfiguration__Uri=http://camunda:8080/engine-rest/engine/default/
-      - TrelloApi__AddCardUri=http://cmaismaitrelloapi/Trello/AddCard
-      - TrelloApi__DeleteCardUri=http://cmaismaitrelloapi/Trello/DeleteCard
-      - TrelloApi__GetCardStateUri=http://cmaismaitrelloapi/Trello/GetCardStatus
-      - TrelloApi__GetCardAttachmentsUri=http://cmaismaitrelloapi/Trello/GetCardAttachments
+      - ASPNETCORE_ENVIRONMENT=Development # Ambiente em que o projeto executará
+      - RabbitMq__Uri=rabbitmq # Nome do conainer do rabbitmq. Os containers internamente comunicam pelo seu nome
+      - RabbitMq__Username=admin # username do rabbitmq
+      - RabbitMq__Password=admin                  # password do rabbitmq
+      - RabbitMq__Queue=NotificationsQueue       # Queue do rabbitmq
+      - RabbitMq__Port=5672                      # Porta do rabbitmq
+      - TrelloCardsTime__coursecoordinator=20  # Tempo para a tramitação coursecoordinator - Verificar diagrama BPMN
+      - TrelloCardsTime__departmentdirector=5 #Tempo para a tramitação departmentdirector - Verificar diagrama BPMN
+      - TrelloCardsTime__coordenatorjury=2 # Tempo para a tramitação coordenatorjury - Verificar diagrama BPMN
+      - TrelloCardsTime__jurydelibers=2 # Tempo para a tramitação jurydelibers - Verificar diagrama BPMN
+      - ElasticConfiguration__Uri=http://elasticsearch:9200/ # Nome do conainer do ElasticSearch. Os containers internamente comunicam pelo seu nome
+      - SummerDelay__Activatedelay=true # Se desejamos que as tramitações sejam interrompidas em Agosto
+      - EmailSecretaria__Email=carlosmiguelcampos1996@gmail.com # Email da secretaria para o envio do email no final do processo
+      - CamundaConfiguration__Uri=http://camunda:8080/engine-rest/engine/default/ # URL para a API exposta do container do camunda
+      - TrelloApi__AddCardUri=http://cmaismaitrelloapi/Trello/AddCard # URL para a API do projeto CMA.ISMAI.Trello.API para adicionar uma nova card
+      - TrelloApi__DeleteCardUri=http://cmaismaitrelloapi/Trello/DeleteCard # URL para a API do projeto CMA.ISMAI.Trello.API para apagar uma card
+      - TrelloApi__GetCardStateUri=http://cmaismaitrelloapi/Trello/GetCardStatus # URL para a API do projeto CMA.ISMAI.Trello.API para obter o estado de uma card
+      - TrelloApi__GetCardAttachmentsUri=http://cmaismaitrelloapi/Trello/GetCardAttachments # URL para a API do projeto CMA.ISMAI.Trello.API para obter os anxeos de uma card
 
 
 
@@ -79,15 +79,15 @@ services:
       - network_cmaismai
     restart: always
     environment:
-      - RabbitMq__Uri=rabbitmq
-      - RabbitMq__Username=admin
-      - RabbitMq__Password=admin
-      - RabbitMq__Queue=NotificationsQueue
-      - RabbitMq__Port=5672
-      - Notification__Email=trelloismai@gmail.com
-      - Notification__Password=trelloteste123
-      - ElasticConfiguration__Uri=http://elasticsearch:9200/
-      - ASPNETCORE_ENVIRONMENT=Production
+      - RabbitMq__Uri=rabbitmq # Nome do conainer do rabbitmq. Os containers internamente comunicam pelo seu nome
+      - RabbitMq__Username=admin # username do rabbitmq
+      - RabbitMq__Password=admin                  # password do rabbitmq
+      - RabbitMq__Queue=NotificationsQueue       # Queue do rabbitmq
+      - RabbitMq__Port=5672                      # Porta do rabbitmq
+      - Notification__Email=trelloismai@gmail.com # Email que faz o envio de notificações
+      - Notification__Password=trelloteste123 # Password do email que faz o envio de notificações
+      - ElasticConfiguration__Uri=http://elasticsearch:9200/ # Nome do conainer do ElasticSearch. Os containers internamente comunicam pelo seu nome
+      - ASPNETCORE_ENVIRONMENT=Development # Ambiente em que o projeto executará
 
 
   cma.ismai.solutions.creditacoes.ui:
@@ -103,14 +103,14 @@ services:
       - network_cmaismai
     restart: always
     environment:
-      - Trello__Uri=http://cmaismaitrelloapi/Trello/AddCardAndProcess
+      - Trello__Uri=http://cmaismaitrelloapi/Trello/AddCardAndProcess # URL para a API do projeto CMA.ISMAI.Trello.API para adicionar uma card e iniciar o processo no camunda
       - ElasticConfiguration__Uri=http://elasticsearch:9200/
-      - TrelloCardsTime__coursecoordinatorjury=5
-      - TrelloCardsTime__coursecoordinatorproposal=15
-      - HealthCheck__Uri=http://localhost:5666/hc-ui
-      - ASPNETCORE_ENVIRONMENT=Production
+      - TrelloCardsTime__coursecoordinatorjury=5 # Tempo para a tramitação coursecoordinatorjury - Verificar diagrama BPMN
+      - TrelloCardsTime__coursecoordinatorproposal=15 # Tempo para a tramitação coursecoordinatorproposal - Verificar diagrama BPMN
+      - HealthCheck__Uri=http://localhost:5666/hc-ui # HealthChecks estão presentes no container CMA.ISMAI.Trello.API - para obtermos estes healthchecks, devemos colocar aqui o nomedocontainerdotrello:portaexposta
+      - ASPNETCORE_ENVIRONMENT=Development # Ambiente em que o projeto executará
 
-
+  # Containers auxiliares a solução
   
   elasticsearch:
    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.4
@@ -177,7 +177,7 @@ services:
     - network_cmaismai
     restart: always
 
-networks:
+networks: # Todos os projetos devem estar na mesma network. 
   network_cmaismai:
     driver: bridge
 volumes:
